--- a/Frontend/admin/dashboard.html
+++ b/Frontend/admin/dashboard.html
@@ -243,6 +243,50 @@
     </div>
 </div>
 
+
+
+<!-- Add Category Modal -->
+<div class="modal fade" id="addCategoryModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Add Category</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form id="addCategoryForm">
+                    <div class="mb-3">
+                        <label for="categoryName" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="categoryName" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="categoryNameAr" class="form-label">Arabic Name</label>
+                        <input type="text" class="form-control" id="categoryNameAr" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="categoryDescription" class="form-label">Description</label>
+                        <textarea class="form-control" id="categoryDescription" rows="3" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="categoryDescriptionAr" class="form-label">Arabic Description</label>
+                        <textarea class="form-control" id="categoryDescriptionAr" rows="3" required></textarea>
+                    </div>
+                    <div class="mb-3">
+                        <label for="categoryImage" class="form-label">Image</label>
+                        <input type="file" class="form-control" id="categoryImage" accept="image/*" required>
+                    </div>
+                    <div class="mb-3">
+                        <img id="categoryImagePreview" src="#" alt="Preview" class="img-thumbnail" style="max-height: 150px; display: none;">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary" id="saveCategoryBtn">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
 <!-- Edit Product Modal -->
 <div class="modal fade" id="editProductModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -294,7 +338,7 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <img id="editProductImagePreview" src="#" alt="Preview" class="img-thumbnail" style="max-height: 150px;">
+                                <img id="editProductImagePreview" src="#" alt="Current Image" class="img-thumbnail" style="max-height: 150px;">
                             </div>
                         </div>
                     </div>
@@ -323,95 +367,51 @@
     </div>
 </div>
 
-
-<!-- Add Category Modal -->
-<div class="modal fade" id="addCategoryModal" tabindex="-1" aria-hidden="true">
+<!-- Edit Category Modal -->
+<div class="modal fade" id="editCategoryModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Add Category</h5>
+                <h5 class="modal-title">Edit Category</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <form id="addCategoryForm">
+                <form id="editCategoryForm">
+                    <input type="hidden" id="editCategoryId">
                     <div class="mb-3">
-                        <label for="categoryName" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="categoryName" required>
+                        <label for="editCategoryName" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="editCategoryName" required>
                     </div>
                     <div class="mb-3">
-                        <label for="categoryNameAr" class="form-label">Arabic Name</label>
-                        <input type="text" class="form-control" id="categoryNameAr" required>
+                        <label for="editCategoryNameAr" class="form-label">Arabic Name</label>
+                        <input type="text" class="form-control" id="editCategoryNameAr" required>
                     </div>
                     <div class="mb-3">
-                        <label for="categoryDescription" class="form-label">Description</label>
-                        <textarea class="form-control" id="categoryDescription" rows="3" required></textarea>
+                        <label for="editCategoryDescription" class="form-label">Description</label>
+                        <textarea class="form-control" id="editCategoryDescription" rows="3" required></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="categoryDescriptionAr" class="form-label">Arabic Description</label>
-                        <textarea class="form-control" id="categoryDescriptionAr" rows="3" required></textarea>
+                        <label for="editCategoryDescriptionAr" class="form-label">Arabic Description</label>
+                        <textarea class="form-control" id="editCategoryDescriptionAr" rows="3" required></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="categoryImage" class="form-label">Image</label>
-                        <input type="file" class="form-control" id="categoryImage" accept="image/*" required>
+                        <label for="editCategoryImage" class="form-label">Image</label>
+                        <input type="file" class="form-control" id="editCategoryImage" accept="image/*">
+                        <small class="text-muted">Leave empty to keep current image</small>
                     </div>
                     <div class="mb-3">
-                        <img id="categoryImagePreview" src="#" alt="Preview" class="img-thumbnail" style="max-height: 150px; display: none;">
+                        <img id="editCategoryImagePreview" src="#" alt="Current Image" class="img-thumbnail" style="max-height: 150px;">
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-primary" id="saveCategoryBtn">Save</button>
+                <button type="button" class="btn btn-primary" id="updateCategoryBtn">Update</button>
             </div>
         </div>
     </div>
 </div>
-
-    <!-- Edit Category Modal -->
-    <div class="modal fade" id="editCategoryModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Edit Category</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="editCategoryForm">
-                        <input type="hidden" id="editCategoryId">
-                        <div class="mb-3">
-                            <label for="editCategoryName" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="editCategoryName" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="editCategoryNameAr" class="form-label">NameAr</label>
-                            <input type="text" class="form-control" id="editCategoryNameAr" required>
-                        </div>
-                        <div class="mb-3">
-                            <label for="editCategoryDescription" class="form-label">Description</label>
-                            <textarea class="form-control" id="editCategoryDescription" rows="3" required></textarea>
-                        </div>
-                        <div class="mb-3">
-                            <label for="editCategoryDescriptionAr" class="form-label">DescriptionAr</label>
-                            <textarea class="form-control" id="editCategoryDescriptionAr" rows="3" required></textarea>
-                        </div>
-                        <div class="mb-3">
-                            <label for="editCategoryImage" class="form-label">Image</label>
-                            <input type="file" class="form-control" id="editCategoryImage" accept="image/*">
-                            <small class="text-muted">Leave empty to keep current image</small>
-                        </div>
-                        <div class="mb-3">
-                            <img id="editCategoryImagePreview" src="" class="img-thumbnail" style="max-height: 150px; display: none;">
-                        </div>
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" id="updateCategoryBtn">Update</button>
-                </div>
-            </div>
-        </div>
-    </div>
-    
+       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/admin/js/dashboard.js"></script>
 </body>
