--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -32,6 +32,100 @@
   <style>
   /* Swiper Styles */
 
+  /* Add these styles to your existing CSS */
+/* Menu Card Container */
+.menu-item {
+    height: 450px; /* Fixed height for all cards */
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #eee;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    transition: transform 0.3s ease;
+}
+
+/* Image Container - Allows full image to show */
+.menu-img-container {
+    height: 200px; /* Fixed height for image area */
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background: #f5f5f5;
+}
+
+/* Image - Scales to fit container while maintaining aspect ratio */
+.menu-img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* Shows full image (change to 'cover' if you prefer cropping */
+    transition: transform 0.3s ease;
+}
+
+/* Content Area - Fixed height for text */
+.menu-content {
+    padding: 15px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Title */
+.menu-item h3 {
+    font-size: 1.25rem;
+    margin-bottom: 10px;
+    min-height: 60px; /* Ensures consistent spacing */
+}
+
+/* Description */
+.menu-item p {
+    flex-grow: 1;
+    margin-bottom: 15px;
+    color: #666;
+}
+
+/* New Products Badge */
+.menu-item .new-badge {
+    background: #7B3F00;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 20px;
+    font-size: 0.75rem;
+    align-self: flex-start;
+}
+
+/* Hover Effects */
+.menu-item:hover {
+    transform: translateY(-5px);
+}
+
+.menu-item:hover .menu-img {
+    transform: scale(1.05);
+}
+/* Ensure all cards have the same height */
+.swiper-slide {
+    height: auto;
+    display: flex;
+}
+
+/* If you're using Bootstrap cards, add this */
+.card {
+    height: 100%;
+}
+
+/* For the products tab */
+#menu-breakfast .menu-item {
+    height: 100%;
+}
+
+/* Optional: Add a fixed height to the entire card if needed */
+.menu-item {
+    min-height: 450px; /* Adjust this value as needed */
+}
+
   @media print {
   /* Make sure body and html take full height */
   html, body {
@@ -438,7 +532,7 @@
             <h1 data-aos="fade-up">Enjoy Your Healthy<br>Delicious Food</h1>
             <p data-aos="fade-up" data-aos-delay="100">We are team of talented designers making websites with Bootstrap</p>
             <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-              <a href="#menu" class="btn-get-started">Discover Menu</a>
+              <a href="menu.html" class="btn-get-started">Discover Menu</a>
               
             </div>
           </div>
@@ -844,7 +938,7 @@ let categories = [];
 document.addEventListener('DOMContentLoaded', function() {
     initSwipers();
     loadCategories();
-    setupLanguageToggle();
+ 
     setupMenuTabs();
 });
 
