--- a/Frontend/menu.html
+++ b/Frontend/menu.html
@@ -28,7 +28,7 @@
 
   <style>
     :root {
-      --primary-color: #7B3F00;
+      --primary-color: #51250C;
       --secondary-color: #FFD166;
       --accent-color: #7B3F00;
       --dark-color: #000000;
@@ -388,7 +388,7 @@
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div class="container position-relative d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
-        <img src="assets/img/logo.png" alt="Spongebob Bakery Logo" class="img-fluid" style="max-height: 40px;">
+        <img src="assets/img/spongpoplogo-removebg-preview.png" alt="Spongebob Bakery Logo" class="img-fluid" style="max-height: 100px;">
       </a>
 
       <nav id="navmenu" class="navmenu">
