--- a/Frontend/admin/dashboard.html
+++ b/Frontend/admin/dashboard.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #7B3F00;
+            --primary-color: #51250C;
             --secondary-color: #227000;
             --accent-color: #4895ef;
             --dark-color: #2b2d42;
